cfn_benchmark/cfn_templates/crothmeier__aws-solutions-architect-labs/lab-04-vpn-directconnect/cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Lab 04: Site-to-Site VPN Simulation'

Parameters:
  EnvironmentName:
    Type: String
    Default: Lab04

  InstanceType:
    Type: String
    Default: t3.micro

  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64

Resources:
  # AWS VPC (Cloud)
  AWSVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AWS-VPC

  AWSSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AWS-Subnet

  AWSIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AWS-IGW

  AttachAWSIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AWSVPC
      InternetGatewayId: !Ref AWSIGW

  AWSRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AWS-RT

  AWSRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachAWSIGW
    Properties:
      RouteTableId: !Ref AWSRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AWSIGW

  AWSSubnetRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AWSSubnet
      RouteTableId: !Ref AWSRouteTable

  # Virtual Private Gateway
  VPNGateway:
    Type: AWS::EC2::VPNGateway
    Properties:
      Type: ipsec.1
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-VGW

  AttachVPNGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AWSVPC
      VpnGatewayId: !Ref VPNGateway

  # Enable route propagation
  VPNGatewayRoutePropagation:
    Type: AWS::EC2::VPNGatewayRoutePropagation
    DependsOn: AttachVPNGateway
    Properties:
      RouteTableIds:
        - !Ref AWSRouteTable
      VpnGatewayId: !Ref VPNGateway

  # Simulated On-Premises VPC
  OnPremVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-OnPrem-VPC

  OnPremSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnPremVPC
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-OnPrem-Subnet

  OnPremIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-OnPrem-IGW

  AttachOnPremIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref OnPremVPC
      InternetGatewayId: !Ref OnPremIGW

  OnPremRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref OnPremVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-OnPrem-RT

  OnPremRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachOnPremIGW
    Properties:
      RouteTableId: !Ref OnPremRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref OnPremIGW

  OnPremSubnetRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref OnPremSubnet
      RouteTableId: !Ref OnPremRouteTable

  # Security Groups
  AWSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS VPC Security Group
      VpcId: !Ref AWSVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  OnPremSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: On-Prem VPC Security Group
      VpcId: !Ref OnPremVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 500
          ToPort: 500
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 4500
          ToPort: 4500
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  # EC2 Instances
  AWSInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref LatestAmiId
      SubnetId: !Ref AWSSubnet
      SecurityGroupIds:
        - !Ref AWSSG
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AWS-Instance

  OnPremInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref LatestAmiId
      SubnetId: !Ref OnPremSubnet
      SecurityGroupIds:
        - !Ref OnPremSG
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-OnPrem-Instance

  # Customer Gateway
  CustomerGateway:
    Type: AWS::EC2::CustomerGateway
    Properties:
      Type: ipsec.1
      BgpAsn: 65000
      IpAddress: !GetAtt OnPremInstance.PublicIp
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-CGW

  # VPN Connection
  VPNConnection:
    Type: AWS::EC2::VPNConnection
    DependsOn:
      - CustomerGateway
      - VPNGateway
    Properties:
      Type: ipsec.1
      StaticRoutesOnly: true
      CustomerGatewayId: !Ref CustomerGateway
      VpnGatewayId: !Ref VPNGateway
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-VPN

  VPNConnectionRoute:
    Type: AWS::EC2::VPNConnectionRoute
    Properties:
      VpnConnectionId: !Ref VPNConnection
      DestinationCidrBlock: 192.168.0.0/16

Outputs:
  AWSVPCId:
    Value: !Ref AWSVPC

  OnPremVPCId:
    Value: !Ref OnPremVPC

  VPNGatewayId:
    Value: !Ref VPNGateway

  CustomerGatewayId:
    Value: !Ref CustomerGateway

  VPNConnectionId:
    Value: !Ref VPNConnection

  AWSInstanceIP:
    Value: !GetAtt AWSInstance.PublicIp

  OnPremInstanceIP:
    Value: !GetAtt OnPremInstance.PublicIp
